--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.13",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
