--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.3.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
