--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.12",
     "vue-js-toggle-button": "^1.3.3",
     "vue-router": "^3.5.1",
+    "vue-top-progress": "^0.7.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
