--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "bootstrap": "^4.6.0",
-    "core-js": "^3.8.3",
-    "jquery": "^3.5.1",
+    "bootstrap": "^5.0.1",
+    "core-js": "^3.12.1",
+    "jquery": "^3.6.0",
     "md5": "^2.3.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
@@ -28,15 +28,15 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@types/vuelidate": "^0.7.13",
-    "@vue/cli-plugin-babel": "~4.5.11",
-    "@vue/cli-plugin-eslint": "~4.5.11",
-    "@vue/cli-plugin-router": "~4.5.11",
-    "@vue/cli-plugin-vuex": "~4.5.11",
-    "@vue/cli-service": "~4.5.11",
+    "@types/vuelidate": "^0.7.14",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.20.0",
-    "eslint-plugin-vue": "^7.5.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-vue": "^7.9.0",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
